# ArduinoThings

Arduino/: Receiver_Code.ino  Transmitter_Code.ino
Arduino Pro Micro/Receptor_443Mhz/: Receptor_443Mhz.ino
Arduino Pro Micro/Servo/: Servo.ino
Arduino Pro Micro/Servo_con_Rotatory_Encoder/: Servo_con_Rotatory_Encoder.ino
Arduino/AT_command_Arduino/: AT_command_Arduino.ino
Arduino/Blink/: Blink.ino
Arduino/Contador/: Contador.ino
Arduino/Counter/: Counter.ino
Arduino/DC_Motor_H_Bridge/: DC_Motor_H_Bridge.ino
Arduino/DC_Motor_PWM/: DC_Motor_PWM.ino
Arduino/Emisor_433Mhz/: Emisor_433Mhz.ino
Arduino/Encoder_derecha_izquierda/: Encoder_derecha_izquierda.ino
Arduino/Encoder_rotatorio_Pool/: Encoder_rotatorio_Pool.ino
Arduino/LCD_Display/: LCD_Display.ino
Arduino/Morse/: Morse.ino
Arduino/Multispeed_I2C_Scanner/: Multispeed_I2C_Scanner.ino
Arduino/Numerador_Display/: Numerador_Display.ino
Arduino/PulseCounter/: PulseCounter.ino
Arduino/PulseCounter_2/: PulseCounter_2.ino
Arduino/Sensor_Ultrasonico/: Sensor_Ultrasonico.ino
Arduino/Sensor_de_Humedad_y_Temperatura/: Sensor_de_Humedad_y_Temperatura.ino
Arduino/Sensor_de_Lluvia/: Sensor_de_Lluvia.ino
Arduino/Sensor_de_Luz/: Sensor_de_Luz.ino
Arduino/Sensor_de_Obstaculos/: Sensor_de_Obstaculos.ino
Arduino/Sensor_de_Temperatura/: Sensor_de_Temperatura.ino
Arduino/Servo_con_Rotatory_Encoder/: Servo_con_Rotatory_Encoder.ino
Arduino/TimerProgramable/: PulsoProgramable.ino
ESP/: commands.txt
ESP/mos1.14/: mosquitto.conf
NodeMCU/LCDTemp/: CMakeLists.txt  TemperaturaLCD.ino
(+39 files in other folders)
